Memperbaiki desainnya dan menambahkan setting

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,23 +1,25 @@
 [versions]
 agp = "8.4.2"
 datastorePreferences = "1.1.1"
-glide = "4.12.0"
+glide = "4.16.0"
+justifiedtextview = "1.1.0"
 kotlin = "1.9.0"
 coreKtx = "1.13.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
 appcompat = "1.7.0"
-kotlinxCoroutinesAndroid = "1.7.3"
+kotlinxCoroutinesAndroid = "1.8.1"
 lifecycleViewmodelKtx = "2.8.3"
-loggingInterceptor = "5.0.0-alpha.2"
-loggingInterceptorVersion = "4.9.1"
+loggingInterceptor = "5.0.0-alpha.14"
+loggingInterceptorVersion = "4.12.0"
+lottie = "6.4.1"
 material = "1.12.0"
 activity = "1.9.0"
 constraintlayout = "2.1.4"
 okhttp = "4.12.0"
-retrofit = "2.9.0"
-squareupLoggingInterceptor = "4.9.0"
+retrofit = "2.11.0"
+squareupLoggingInterceptor = "4.12.0"
 
 [libraries]
 adapter-rxjava2 = { module = "com.squareup.retrofit2:adapter-rxjava2", version.ref = "retrofit" }
@@ -31,10 +33,12 @@ junit = { group = "junit", name = "junit", version.ref = "junit" }
 androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
 androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
+justifiedtextview = { module = "com.codesgood:justifiedtextview", version.ref = "justifiedtextview" }
 kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "kotlinxCoroutinesAndroid" }
 logging-interceptor = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptor" }
 logging-interceptor-v490 = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "squareupLoggingInterceptor" }
 logging-interceptor-v491 = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "loggingInterceptorVersion" }
+lottie = { module = "com.airbnb.android:lottie", version.ref = "lottie" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
