--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,10 +1,14 @@
 [versions]
 agp = "8.5.2"
+androidxJunit = "1.1.3"
+coreTesting = "2.2.0"
 datastorePreferences = "1.1.1"
 espressoConcurrentIdlingResourceVersion = "3.5.1"
 espressoCore = "3.6.1"
 espressoConcurrentIdlingResource = "3.2.0"
+espressoCoreVersion = "3.5.1"
 espressoIntents = "3.6.1"
+espressoIntentsVersion = "3.5.1"
 glide = "4.16.0"
 junitVersion = "1.2.1"
 justifiedtextview = "1.1.0"
@@ -21,12 +25,18 @@ material = "1.12.0"
 activity = "1.9.1"
 constraintlayout = "2.1.4"
 mockitoCore = "3.6.0"
+mockitoCoreVersion = "5.3.0"
 mockitoInline = "3.6.0"
+mockitoInlineVersion = "5.3.0"
 mockitoKotlin = "3.2.0"
+mockitoMockitoInline = "5.4.0"
+mockitoMockitoInlineVersion = "5.3.1"
 okhttp = "4.12.0"
+orgMockitoMockitoInline = "5.2.0"
 pagingCommonKtx = "3.3.2"
 retrofit = "2.11.0"
 robolectric = "4.4"
+robolectricRobolectric = "4.10.3"
 rules = "1.6.1"
 runner = "1.6.2"
 swiperefreshlayout = "1.1.0"
@@ -38,12 +48,18 @@ playServicesLocation = "21.3.0"
 [libraries]
 adapter-rxjava2 = { module = "com.squareup.retrofit2:adapter-rxjava2", version.ref = "retrofit" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
+androidx-core-testing = { module = "androidx.arch.core:core-testing", version.ref = "coreTesting" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidx-espresso-concurrent-idling-resource-v351 = { module = "androidx.test.espresso:espresso-concurrent-idling-resource", version.ref = "espressoConcurrentIdlingResourceVersion" }
+androidx-espresso-contrib = { module = "androidx.test.espresso:espresso-contrib", version.ref = "espressoConcurrentIdlingResourceVersion" }
+androidx-espresso-core-v351 = { module = "androidx.test.espresso:espresso-core", version.ref = "espressoCoreVersion" }
+androidx-espresso-idling-resource = { module = "androidx.test.espresso:espresso-idling-resource", version.ref = "espressoConcurrentIdlingResourceVersion" }
 androidx-espresso-intents = { module = "androidx.test.espresso:espresso-intents", version.ref = "espressoIntents" }
 androidx-espresso-concurrent-idling-resource = { module = "androidx.test.espresso:espresso-concurrent-idling-resource", version.ref = "espressoConcurrentIdlingResource" }
 androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espressoCore" }
+androidx-espresso-intents-v351 = { module = "androidx.test.espresso:espresso-intents", version.ref = "espressoIntentsVersion" }
 androidx-junit = { module = "androidx.test.ext:junit", version.ref = "junitVersion" }
+androidx-junit-v113 = { module = "androidx.test.ext:junit", version.ref = "androidxJunit" }
 androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "lifecycleViewmodelKtx" }
 androidx-paging-common-ktx = { module = "androidx.paging:paging-common-ktx", version.ref = "pagingCommonKtx" }
 androidx-runner = { module = "androidx.test:runner", version.ref = "runner" }
@@ -62,8 +78,13 @@ lottie = { module = "com.airbnb.android:lottie", version.ref = "lottie" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 androidx-activity = { group = "androidx.activity", name = "activity", version.ref = "activity" }
 androidx-constraintlayout = { group = "androidx.constraintlayout", name = "constraintlayout", version.ref = "constraintlayout" }
+mockito-core-v530 = { module = "org.mockito:mockito-core", version.ref = "mockitoCoreVersion" }
 mockito-inline = { module = "org.mockito:mockito-inline", version.ref = "mockitoInline" }
 mockito-core = { module = "org.mockito:mockito-core", version.ref = "mockitoCore" }
+mockito-inline-v520 = { module = "org.mockito:mockito-inline", version.ref = "orgMockitoMockitoInline" }
+mockito-inline-v530 = { module = "org.mockito:mockito-inline", version.ref = "mockitoInlineVersion" }
+mockito-inline-v531 = { module = "org.mockito:mockito-inline", version.ref = "mockitoMockitoInlineVersion" }
+mockito-inline-v540 = { module = "org.mockito:mockito-inline", version.ref = "mockitoMockitoInline" }
 mockito-kotlin = { module = "org.mockito.kotlin:mockito-kotlin", version.ref = "mockitoKotlin" }
 okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
@@ -72,6 +93,7 @@ play-services-maps = { group = "com.google.android.gms", name = "play-services-m
 androidx-paging-runtime-ktx = { group = "androidx.paging", name = "paging-runtime-ktx", version.ref = "pagingRuntimeKtx" }
 play-services-location = { group = "com.google.android.gms", name = "play-services-location", version.ref = "playServicesLocation" }
 robolectric = { module = "org.robolectric:robolectric", version.ref = "robolectric" }
+robolectric-v4103 = { module = "org.robolectric:robolectric", version.ref = "robolectricRobolectric" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
